gcc/testsuite/rust/rustc/ui/parser/issues/issue-62546_dg.rs
pub t(# // { dg-error "" "" { target *-*-* } }

